# stockagent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: PRD_v1.md  prd.md
features/: FEATURE_INDEX.md
features/001_project_bootstrap/: acceptance.md  rollback.md  spec.md  tasks.md  verify.md
features/002_polygon_client/: acceptance.md  rollback.md  spec.md  tasks.md  verify.md
features/003_technical_indicators/: acceptance.md  rollback.md  spec.md  tasks.md  verify.md
features/004_news_sentiment/: acceptance.md  rollback.md  spec.md  tasks.md  verify.md
features/005_langgraph_workflow/: acceptance.md  rollback.md  spec.md  tasks.md  verify.md
features/006_recommendation_engine/: acceptance.md  rollback.md  spec.md  tasks.md  verify.md
features/007_report_synthesis/: acceptance.md  rollback.md  spec.md  tasks.md  verify.md
features/008_streamlit_ui/: acceptance.md  rollback.md  spec.md  tasks.md  verify.md
features/009_tests_and_quality/: acceptance.md  rollback.md  spec.md  tasks.md  verify.md
prompts/: dev.md  prd.md  test.md
scripts/: run_feature_tests.py
src/stockagent/: __init__.py  config.py  models.py
tests/: __init__.py  conftest.py  test_001_project_bootstrap.py  test_002_polygon_client.py  test_003_technical_indicators.py  test_004_news_sentiment.py  test_005_langgraph_workflow.py  test_006_recommendation_engine.py  test_007_report_synthesis.py  test_008_streamlit_ui.py  test_009_tests_and_quality.py
tests/integration/: __init__.py  test_polygon_client.py  test_workflow.py
(+14 files in other folders)
